# ragflowengine

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  frontend_streamlit.py  pyproject.toml  render.yaml
app/: main.py
app/core/: models.py  settings.py
app/services/: analyzer.py  pdf_extractor.py  rag_engine.py  report_pdf.py  storage.py
app/web/: app.js  index.html  styles.css
rag_careerfit_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/engines/: rag-engine.js
src/prompts/: rag-feedback.prompt.js
src/public/: app.js  index.html
src/services/: analysis-service.js
src/utils/: text-utils.js
tests/: test_analyzer.py
